[tool.poetry]
name = "offworld"
version = "0.1.0"
description = ""
authors = ["Tereza Iofciu <terezaif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.9"
flake8 = "^3.8.4"
black = "^20.8b1"
pre-commit = "^2.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
