[tool.poetry]
name = "offworld"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Tereza Iofciu <terezaif@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^2.2.9"
flake8 = "^3.8.4"
black = "^20.8b1"
pre-commit = "^2.9.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
